# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header$

*portage-2.0.47-r8 (28 Feb 2003): Fixes -- cvs-src, ebuild.sh, repoman

  28 Feb 2003; Nicholas Jones <carpaski@gentoo.org> *: reorg ebuild.sh again
	to ensure that aliases are expanded properly. Repoman now determines the
	proper PORTDIR to set when loading portage to scan the cvs tree. portage.py
	fixes for cvs-src permission problems with userpriv.

*portage-2.0.47-r7 (27 Feb 2003): Quick fix for eerror() problem.

*portage-2.0.47-r6 (26 Feb 2003): Drop deprecated warnings for new syntax.

  26 Feb 2003; Alain Penders <alain@gentoo.org> emerge: Drop deprecated
  warnings for new syntax.  Don't make people switch to the new syntax
  until it's agreed on by everyone.

*portage-2.0.47-r5 (26 Feb 2003): Wicked Fast, BugFree v3.1, UserPriv

  26 Feb 2003; Nicholas Jones <carpaski@gentoo.org> *: Update docs and help
  again to drop --system and --world, and pull them from emerge's command
  line. General cleanups.
  
  26 Feb 2003; Nicholas Jones <carpaski@gentoo.org> emerge/portage.py: Fixes
  to the cache directory permissions -- all dirs are properly owned by group
  portage now. Add CCACHE_SIZE setting so we set a value for ccache. If the
  dirs are set to the wrong perms, make sure they get changed recursively.
  
  26 Feb 2003; Nicholas Jones <carpaski@gentoo.org> ebuild.sh: Rearraged the
  code blocks so that they are easier to follow -- no more code in between
  functions. All code follows function definitions now.

*portage-2.0.47-r4 (25 Feb 2003): Wicked Fast, BugFree v3, UserPriv

  25 Feb 2003; Nicholas Jones <carpaski@gentoo.org> *: Update docs and help
  to match the deprecation of actions without '--' preceding them.

  25 Feb 2003; Nicholas Jones <carpaski@gentoo.org> portage.py: Message
  updates. Fix secpass for portage user. Set PORTAGE_GID for ebuild.sh to