@@ -2,7 +2,12 @@
 # Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
 # $Header$
 
-*portage-2.0.47-r8 (28 Feb 2003): Fixes -- cvs-src, ebuild.sh, repoman
+*portage-2.0.47-r8 (02 Mar 2003): Fixes -- cvs-src, ebuild.sh, repoman
+
+  02 Mar 2003; Nicholas Jones <carpaski@gentoo.org> *: Fixes to eclass
+	errors and messages -- raise on not found. emerge --debug works for
+	ebuilds with syntax errors now -- needs better implimentation though,
+	debug=0 in params can't be used due to scope limits.
 
   28 Feb 2003; Nicholas Jones <carpaski@gentoo.org> *: reorg ebuild.sh again
 	to ensure that aliases are expanded properly. Repoman now determines the
